--- a/src/App.css
+++ b/src/App.css
@@ -19,12 +19,12 @@ main {
 }
 
 /* Header Styles */
-header {
+/* header {
   background-color: #283593;
   padding: 20px;
   text-align: center;
   color: white;
-}
+} */
 
 header h1 {
   margin: 0;
@@ -36,7 +36,7 @@ header nav {
 }
 
 header nav a {
-  color: #ffca28;
+  color: white;
   text-decoration: none;
   font-weight: bold;
   margin: 0 10px;
@@ -48,8 +48,9 @@ header nav a:hover {
 
 /* Footer Styles */
 footer {
-  background-color: #283593;
-  color: white;
+  /* background-color: #004d40; */
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
   text-align: center;
   padding: 10px 0;
 }
