--- a/src/styles/SDGsPage.css
+++ b/src/styles/SDGsPage.css
@@ -1,6 +1,7 @@
 /* Add this to your existing CSS file, e.g., SDGsPage.css */
 /*v5 11:53am*/
-.sdgs-container {
+
+ .sdgs-container {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -31,7 +32,7 @@
   border: 1px solid #ddd;
   border-radius: 8px;
   overflow: hidden;
-  width: 250px;
+  width: 260px;
   height: 400px;
   margin: 0 auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -41,7 +42,8 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-}
+} 
+
 
 /*.sdg-card {*/
 /*  perspective: 1000px;*/
@@ -51,9 +53,10 @@
 /*}*/
 
 .sdg-card-inner {
+  align-items: center;
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 180px;
+  height: 300px;
   text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
@@ -77,6 +80,7 @@
 .sdg-card-back {
   transform: rotateY(180deg);
 }
+
 
 
 
