--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,7 +1,5 @@
-/* src/styles/Header.css */
-
 header {
-    background-color: #28937a; /* Dark teal background */
+    background-color: #28937a;
     color: white;
     padding: 20px;
     display: flex;
@@ -33,12 +31,12 @@ header {
   }
   
   nav a:hover {
-    background-color: #00000058; /* Lighter teal on hover */
+    background-color: #00000058;
     transform: scale(1.1);
   }
   
   nav a.active {
-    background-color: #000000; /* Highlight active link */
+    background-color: #000000;
   }
   
   header::before {
