--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -21,7 +21,28 @@
     padding: 20px;
 }
 
+.video-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* height: 100vh; */
+    width: 100vw;  
+    /* Full viewport width */
+}
+
 .background-video {
+    align-self: center;
+    /* position: relative; */
+    /* z-index: 9999; */
+    top: 0;
+    left: 0;
+    width: 1000px;
+    height: 100%;
+    max-height: 500px;
+    /* object-fit: cover; */
+    opacity: 100%;
+}
+/* .background-video {
     position: absolute;
     top: 0;
     left: 0;
@@ -31,7 +52,7 @@
     object-fit: cover;
     z-index: -1;
     opacity: 0.5;
-}
+} */
 
 .content {
     position: relative;
