--- a/src/styles/LessonPlans.css
+++ b/src/styles/LessonPlans.css
@@ -118,7 +118,7 @@
   height: 200px; /* Adjust height as needed */
 }
 
-.lds-ring {
+/* .lds-ring {
   display: inline-block;
   position: relative;
   width: 80px;
@@ -151,7 +151,7 @@
   100% {
     transform: rotate(360deg);
   }
-}
+} */
 
 
 
@@ -276,6 +276,7 @@
   justify-content: center;
   height: 300px;
 }
+  */
 
 .lds-ring {
   display: inline-block;
@@ -296,7 +297,7 @@
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
 }
-
+ 
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
 }
@@ -317,7 +318,7 @@
     transform: rotate(360deg);
   }
 }
- */
+
 
 
 
