--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -21,27 +21,48 @@
     padding: 20px;
 }
 
+
+.video-container {
+    /* Previous styles */
+    position: relative; /* To ensure proper positioning relative to other elements*/
+    width: 100%; /* or a specific width, depending on your layout */
+    padding-bottom: 56.25%; /* Aspect ratio for 16:9 video (adjust if needed) */
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
+
+
+
+
+
+/* 10 Oct old after removing video tag from HomePage.js */
+/* 
 .video-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* height: 100vh; */
     width: 100vw;  
-    /* Full viewport width */
 }
 
 .background-video {
     align-self: center;
-    /* position: relative; */
-    /* z-index: 9999; */
     top: 0;
     left: 0;
     width: 1000px;
     height: 100%;
     max-height: 500px;
-    /* object-fit: cover; */
     opacity: 100%;
-}
+} */
 /* .background-video {
     position: absolute;
     top: 0;
@@ -58,11 +79,8 @@
     position: relative;
     z-index: 1; 
     padding-top: 60vh;
-    max-height: 500px;
+    max-height: 200px;
 }
-
-
-
 
 .home-page h2 {
     font-size: 36px;
