--- a/src/styles/SDGsPage.css
+++ b/src/styles/SDGsPage.css
@@ -45,8 +45,8 @@
 .sdg-card-inner {
   align-items: center;
   position: relative;
-  width: 180px;
-  height: 300px;
+  width: 200px;
+  height: 350px;
   text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
@@ -57,13 +57,13 @@
 }
 
 .sdg-card-front, .sdg-card-back {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
   border: 1px solid #ddd;
   border-radius: 8px;
-  padding: 20px;
+  /* padding: 20px; */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
